Manutenção: Background Mobile e Botões

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <section id="mensagens">
                 <div class="frontScreen">
                     <!-- INSTRUÇÃO DO JOGO -->
-                    <div class="aviso">
+                    <div class="aviso displayNone">
                         <div class="conteudo_aviso">
                             <div class="texto_aviso">
                                 <p>Use as setas para guiar o personagem até o alvo</p>
